# saccade

./: .gitignore  .gitleaksignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SACCADE_BUILD_SPEC_v4.md  SACCADE_M-1_CODEX_PROMPT.md  SECURITY.md  TRADEMARKS.md
bins/devmax/: Cargo.toml
bins/formmax/: Cargo.toml
bins/formmax/src/: main.rs
bins/mousemax/: Cargo.toml
bins/mousemax/src/: main.rs
bins/saccade-mcp/: Cargo.toml
bins/saccade-mcp/src/: main.rs
bins/saccade-servoshell/: Cargo.toml
bins/saccade-servoshell/src/: main.rs
bins/saccade-shell/: Cargo.toml
crates/saccade_browser/: Cargo.toml
crates/saccade_browser/src/: arena_run.rs  browser_session.rs  browser_session_worker.rs  calibration.rs  devmax_probe.rs  dogfood.rs  formmax_run.rs  lib.rs  native_input.rs  page_selftest.rs  real_run.rs  recon.rs  rendering_profile.rs  selftest.rs  trusted_tabs.rs  user_flow.rs
crates/saccade_core/: Cargo.toml
crates/saccade_detect/: Cargo.toml
crates/saccade_engine_api/: Cargo.toml
crates/saccade_engine_api/src/: lib.rs  windows_named_pipe.rs
crates/saccade_motor/: Cargo.toml
crates/saccade_replay/: Cargo.toml
crates/saccade_verify/: Cargo.toml
docs/: CEF_MIGRATION_AND_CLEANUP_PLAN.md  CURRENT_ACTION_ITEMS.md  CURRENT_PLAN.md  PRODUCT_CONTRACT.md  PUBLIC_EVIDENCE_GUIDE.md  README.md  SACCADE_ADVANTAGES_AND_IMPROVEMENT_CHECKLIST.md  SACCADE_DOGFOOD_HANDOFF.md  SACCADE_EVALUATION_GAUNTLET_v1.md  SACCADE_FORMS_PDF_FOCUS_PLAN_20260711.md  SACCADE_NEXT_PLAN_v5.md  SACCADE_PAIN_LEDGER_20260711.md  SACCADE_PROJECT_EVALUATION_20260710.md  VENDOR_INTEGRATION_READINESS_PLAN.md  WINDOWS_DOGFOOD_START_HERE.md  agent_builder_recruitment_wave1_20260709.md  agent_compare_benchmark_plan.md  agent_compare_smoke_report.md  ai017_real_dogfood_flow_matrix.md  ai018_dogfood_launch_visibility.md  ai019_public_evidence_pack.md  ai020_human_in_loop_site_matrix.md  ai021_profile_productization_report.md  ai023_public_site_smoke_matrix.md  ai024_public_site_matrix_expansion.md  ai025_live_draft_profiles.md  ai026_live_github_issue_gate_hardening.md  ai027_github_ui_canary.md  ai028_mouseaccuracy_original_gate.md  ai029_hn_submit_dogfood.md  ai030_cloudflare_compatibility_route.md  ai031_cef_mcp_form_product.md  ai031_generic_form_plan.md  ai033_agent_safety.md  ai034_github_human_agent_agreement.md  ai038_conversational_dogfood.md  ai039_native_browser_chrome.md  ai040_cleanup_manifest.json  ai040_per_tab_agent_consent.md  ai044_agent_browser_complete_report.md  (+85 more)
docs/launch/: ARTICLE_BROWSER_RECEIPTS.md  HACKER_NEWS_LAUNCH.md  MACOS_BUILD86_RELEASE_REPORT.md  MACOS_PUBLIC_BUILD_CHECKLIST.md  PUBLICATION_BACKLOG.md  README.md  WEB_BLOG_RELEASE_CHECKLIST.md
eval/: README.md
evidence/: README.md
fixtures/: cef_adapter_lifecycle.html
scripts/: agent_compare.py  apply_windows_final_branding.ps1  apply_windows_mcp_dogfood_profile.ps1  apply_windows_pak_branding.ps1  benchmark_agent_browser_e2e.py  benchmark_playwright_parity.py  browser_compat_metrics.py  build_demo_comparison_pack.py  build_dogfood_release.sh  build_local_game_reflex_review.js  build_reflex_evidence_pack.py  capture_chrome_reference.sh  capture_native_browser_ui.py  check_human_agent_agreement.py  chrome_compat_cdp.py  chrome_compat_control.py  chrome_reference_cdp.py  classify_local_game_facts.js  convert_mousemax_replay_to_facts.js  create_redacted_note_packet.js  docmax_pdf.py  dogfood_pixabay_sound_download.py  e2e_arena.sh  fix_engine_api_cross_platform_tests.ps1  fix_engine_api_windows_pipe_open.ps1  fix_windows_default_browser_associations.ps1  formmax_fixture_smoke.js  formmax_pdf_feasibility.py  generate_release_sbom.py  measure_servoshell_game_runtime.js  port_engine_api_windows.ps1  port_mcp_windows.ps1  prepare_mousemax_parity_pack.sh  probe_ai033_browser_adversaries.py  probe_ai033_safety.py  probe_ai038_conversational_dogfood.py  probe_browser_fact_stream.js  probe_canvas_reductions.py  probe_canvas_screenshot_paths.py  probe_cef_agent_safety.py  (+61 more)
site_matrices/: public_core.json  public_extended.json
test_pages/: calibration.html  canvas_arc_targets.html  canvas_sprite_targets.html  dom_targets.html  high_dpi_grid.html  overlay_interference.html  selftest.css  selftest_targets.js  svg_targets.html  webgl_targets.html
(+256 files in other folders)
