[package]
name = "formmax"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
saccade_browser = { path = "../../crates/saccade_browser" }
serde.workspace = true
serde_json.workspace = true
tiny_http.workspace = true
url.workspace = true
