[package]
name = "mousemax"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap.workspace = true
image.workspace = true
saccade_browser = { path = "../../crates/saccade_browser" }
saccade_core = { path = "../../crates/saccade_core" }
saccade_replay = { path = "../../crates/saccade_replay" }
serde_json.workspace = true
tiny_http.workspace = true
url.workspace = true
