[package]
name = "saccade-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap.workspace = true
saccade_core = { path = "../../crates/saccade_core" }
saccade_engine_api = { path = "../../crates/saccade_engine_api" }
serde.workspace = true
serde_json.workspace = true
tiny_http.workspace = true
url.workspace = true
