[package]
name = "saccade-servoshell"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
getrandom.workspace = true
clap.workspace = true
saccade_core = { path = "../../crates/saccade_core" }
serde.workspace = true
serde_json.workspace = true
tiny_http.workspace = true
url.workspace = true
