[package]
name = "saccade_browser"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
ab_glyph = "0.2.32"
anyhow.workspace = true
euclid.workspace = true
glow = "0.17"
image.workspace = true
serde.workspace = true
serde_json.workspace = true
saccade_core = { path = "../saccade_core" }
saccade_detect = { path = "../saccade_detect" }
saccade_motor = { path = "../saccade_motor" }
saccade_replay = { path = "../saccade_replay" }
servo = "=0.2.0"
tiny-skia = "0.11.4"
url.workspace = true
winit.workspace = true
